--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
+										<h2>About Me</h2>
 										<p>Certified Data Analyst<br />
 										Proficient in Data Analytic tool like Excel, Power Bi and SQL<a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
@@ -486,3 +486,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
